--- a/20-volume-local.yaml
+++ b/20-volume-local.yaml
@@ -14,7 +14,7 @@ spec:
   storageClassName: local-storage
   local:
     # Edit this to be an actual path on your server's filesystem
-    path: /mnt/local-volumes/minecraft 
+    path: /mnt/local-volumes/minecraft
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -22,4 +22,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - dell3 # Edit this to be an actual kubernetes name of your server
+          - km1 # Edit this to be an actual kubernetes name of your server
