--- a/30-deployment-local.yaml
+++ b/30-deployment-local.yaml
@@ -46,16 +46,18 @@ spec:
         readinessProbe:
           exec:
             command:
-            - mcstatus
+            - mc-monitor
+            - status
+            - --host
             - 127.0.0.1
-            - ping
           initialDelaySeconds: 30
           periodSeconds: 30
         livenessProbe:
           exec:
             command:
-            - mcstatus
+            - mc-monitor
+            - status
+            - --host
             - 127.0.0.1
-            - ping
           initialDelaySeconds: 30
           periodSeconds: 30
